workspace_check_complete.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/crates/codegraph-napi/Cargo.toml
workspace: /Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/Cargo.toml
warning: invalid feature `demo` in required-features of target `memory_profiler_demo`: `demo` is not present in [features] section
warning: invalid feature `demo` in required-features of target `readahead_demo`: `demo` is not present in [features] section
    Checking surrealdb v2.3.10
    Checking criterion v0.7.0
warning: unused import: `Mutex`
  --> crates/codegraph-zerocopy/src/buffer.rs:10:19
   |
10 | use parking_lot::{Mutex, RwLock};
   |                   ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `SeekFrom` and `Seek`
  --> crates/codegraph-zerocopy/src/mmap.rs:13:10
   |
13 |     io::{Seek, SeekFrom},
   |          ^^^^  ^^^^^^^^

warning: unused import: `error`
  --> crates/codegraph-zerocopy/src/mmap.rs:17:22
   |
17 | use tracing::{debug, error, instrument, warn};
   |                      ^^^^^

warning: unused imports: `deserialize` and `from_bytes_unchecked`
  --> crates/codegraph-zerocopy/src/serialization.rs:11:31
   |
11 |     access, access_unchecked, deserialize, from_bytes, from_bytes_unchecked, rancor::Failure,
   |                               ^^^^^^^^^^^              ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `debug` and `trace`
  --> crates/codegraph-zerocopy/src/serialization.rs:15:15
   |
15 | use tracing::{debug, instrument, trace};
   |               ^^^^^              ^^^^^

warning: unused import: `Mutex`
 --> crates/codegraph-zerocopy/src/shared_memory.rs:8:19
  |
8 | use parking_lot::{Mutex, RwLock};
  |                   ^^^^^

warning: unused imports: `ffi::CString` and `ptr::NonNull`
  --> crates/codegraph-zerocopy/src/shared_memory.rs:12:5
   |
12 |     ffi::CString,
   |     ^^^^^^^^^^^^
...
16 |     ptr::NonNull,
   |     ^^^^^^^^^^^^

warning: unused import: `error`
  --> crates/codegraph-zerocopy/src/shared_memory.rs:22:22
   |
22 | use tracing::{debug, error, instrument, trace, warn};
   |                      ^^^^^

warning: constant `CACHE_LINE_SIZE` is never used
  --> crates/codegraph-zerocopy/src/buffer.rs:22:7
   |
22 | const CACHE_LINE_SIZE: usize = 64;
   |       ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `path` is never read
   --> crates/codegraph-zerocopy/src/mmap.rs:336:5
    |
331 | pub struct MmapCircularBuffer {
    |            ------------------ field in this struct
...
336 |     path: PathBuf,
    |     ^^^^

warning: hiding a lifetime that's elided elsewhere is confusing
   --> crates/codegraph-zerocopy/src/mmap.rs:255:17
    |
255 |     pub fn read(&self) -> ThreadSafeMmapReadGuard {
    |                 ^^^^^     ^^^^^^^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
    |                 |
    |                 the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
    = note: `#[warn(mismatched_lifetime_syntaxes)]` on by default
help: use `'_` for type paths
    |
255 |     pub fn read(&self) -> ThreadSafeMmapReadGuard<'_> {
    |                                                  ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> crates/codegraph-zerocopy/src/mmap.rs:262:18
    |
262 |     pub fn write(&self) -> ThreadSafeMmapWriteGuard {
    |                  ^^^^^     ^^^^^^^^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
    |                  |
    |                  the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
262 |     pub fn write(&self) -> ThreadSafeMmapWriteGuard<'_> {
    |                                                    ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> crates/codegraph-zerocopy/src/shared_memory.rs:142:19
    |
142 |     pub fn reader(&self) -> SharedMemoryReader {
    |                   ^^^^^     ^^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
    |                   |
    |                   the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
142 |     pub fn reader(&self) -> SharedMemoryReader<'_> {
    |                                               ++++

warning: hiding a lifetime that's elided elsewhere is confusing
   --> crates/codegraph-zerocopy/src/shared_memory.rs:154:19
    |
154 |     pub fn writer(&self) -> ZeroCopyResult<SharedMemoryWriter> {
    |                   ^^^^^                    ^^^^^^^^^^^^^^^^^^ the same lifetime is hidden here
    |                   |
    |                   the lifetime is elided here
    |
    = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
help: use `'_` for type paths
    |
154 |     pub fn writer(&self) -> ZeroCopyResult<SharedMemoryWriter<'_>> {
    |                                                              ++++

warning: `codegraph-zerocopy` (lib test) generated 14 warnings (run `cargo fix --lib -p codegraph-zerocopy --tests` to apply 12 suggestions)
warning: `codegraph-zerocopy` (lib) generated 14 warnings (14 duplicates)
    Checking codegraph-cache v1.0.0 (/Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/crates/codegraph-cache)
    Checking core-rag-mcp-server v1.0.0 (/Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/crates/core-rag-mcp-server)
error[E0432]: unresolved import `codegraph_parser::pipeline`
   --> crates/core-rag-mcp-server/src/rag_tools.rs:162:31
    |
162 |         use codegraph_parser::pipeline::ConversionPipeline;
    |                               ^^^^^^^^ could not find `pipeline` in `codegraph_parser`

warning: unused import: `std::future::Future`
 --> crates/core-rag-mcp-server/src/lib.rs:8:5
  |
8 | use std::future::Future;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0433]: failed to resolve: use of undeclared type `CoreRagServerConfig`
 --> crates/core-rag-mcp-server/src/tests.rs:8:22
  |
8 |         let config = CoreRagServerConfig::default();
  |                      ^^^^^^^^^^^^^^^^^^^ use of undeclared type `CoreRagServerConfig`
  |
help: consider importing this struct through its public re-export
  |
3 +     use crate::CoreRagServerConfig;
  |

error[E0433]: failed to resolve: use of undeclared type `CoreRagMcpServer`
 --> crates/core-rag-mcp-server/src/tests.rs:9:22
  |
9 |         let result = CoreRagMcpServer::new(config);
  |                      ^^^^^^^^^^^^^^^^ use of undeclared type `CoreRagMcpServer`
  |
help: consider importing this struct
  |
3 +     use crate::CoreRagMcpServer;
  |

error[E0433]: failed to resolve: use of undeclared type `CoreRagServerConfig`
  --> crates/core-rag-mcp-server/src/tests.rs:15:26
   |
15 |         let mut config = CoreRagServerConfig::default();
   |                          ^^^^^^^^^^^^^^^^^^^ use of undeclared type `CoreRagServerConfig`
   |
help: consider importing this struct through its public re-export
   |
 3 +     use crate::CoreRagServerConfig;
   |

error[E0433]: failed to resolve: use of undeclared type `CoreRagServerConfig`
  --> crates/core-rag-mcp-server/src/tests.rs:25:22
   |
25 |         let config = CoreRagServerConfig::default();
   |                      ^^^^^^^^^^^^^^^^^^^ use of undeclared type `CoreRagServerConfig`
   |
help: consider importing this struct through its public re-export
   |
 3 +     use crate::CoreRagServerConfig;
   |

error[E0433]: failed to resolve: use of undeclared type `RagTools`
  --> crates/core-rag-mcp-server/src/tests.rs:26:22
   |
26 |         let result = RagTools::new(config);
   |                      ^^^^^^^^ use of undeclared type `RagTools`
   |
help: consider importing this struct through its public re-export
   |
 3 +     use crate::RagTools;
   |

error[E0433]: failed to resolve: use of undeclared type `CoreRagServerConfig`
  --> crates/core-rag-mcp-server/src/tests.rs:32:22
   |
32 |         let config = CoreRagServerConfig::default();
   |                      ^^^^^^^^^^^^^^^^^^^ use of undeclared type `CoreRagServerConfig`
   |
help: consider importing this struct through its public re-export
   |
 3 +     use crate::CoreRagServerConfig;
   |

error[E0433]: failed to resolve: use of undeclared type `RagTools`
  --> crates/core-rag-mcp-server/src/tests.rs:33:25
   |
33 |         let rag_tools = RagTools::new(config).unwrap();
   |                         ^^^^^^^^ use of undeclared type `RagTools`
   |
help: consider importing this struct through its public re-export
   |
 3 +     use crate::RagTools;
   |

error[E0433]: failed to resolve: use of undeclared type `CoreRagServerConfig`
  --> crates/core-rag-mcp-server/src/tests.rs:45:22
   |
45 |         let config = CoreRagServerConfig::default();
   |                      ^^^^^^^^^^^^^^^^^^^ use of undeclared type `CoreRagServerConfig`
   |
help: consider importing this struct through its public re-export
   |
 3 +     use crate::CoreRagServerConfig;
   |

error[E0433]: failed to resolve: use of undeclared type `RagTools`
  --> crates/core-rag-mcp-server/src/tests.rs:46:25
   |
46 |         let rag_tools = RagTools::new(config).unwrap();
   |                         